# Sherrrberrr-iOS

./: .gitignore  CMakeLists.txt  README.md  bootstrap_sourcepack.py  codemagic.yaml
.github/workflows/: unpack-source.yml
.sourcepack/: part00  part01  part02  part04  part06  part08  part10
Source/Dsp/: DualDistortionModule.cpp  DualDistortionModule.h  DualFilterModule.cpp  DualFilterModule.h  MacroMapper.cpp  MacroMapper.h  SourceEnvelope.cpp  SourceEnvelope.h
docs/: ARCHITECTURE_1.0.md  CODEMAGIC_SETUP_1.0.md  IOS_RELEASE_VALIDATION_1.0.json  IPAD_TEST_PLAN_1.0.md  RELEASE_NOTES_1.0.md
